# personal_cloud

./: .gitignore  CMakeLists.txt  client.cpp  client.hpp  database.hpp  fileexplorerwindow.cpp  fileexplorerwindow.hpp  fileexplorerwindow.ui  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  network.hpp  protocol.hpp  server.cpp  session.hpp  threadpool.hpp
CLIENT/: client.cpp  client.hpp
CLIENT/UI/: fileexplorerwindow.cpp  fileexplorerwindow.hpp  fileexplorerwindow.ui  mainwindow.cpp
PROTOCOL/: protocol.hpp
SERVER/: database.hpp  network.hpp  protocol.hpp  server.cpp  session.hpp  threadpool.hpp
